hphp/hack/test/typecheck/coeffects/reified_generic.php.exp
File "reified_generic.php", line 14, characters 3-3:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "reified_generic.php", line 13, characters 13-14:
  From this declaration, the context of this function body provides the capability set {}
  File "reified_generic.php", line 11, characters 28-31:
  But the function being called requires the capability WriteProperty
